# f1-openmp

./: .holamundo.c.swp  CMakeLists.txt  comp_run.sh  holamundo0  holamundo0.c
src/: main.cpp
